--- a/index.html
+++ b/index.html
@@ -172,7 +172,15 @@
 
         <div class="hero container-fluid">
             <div class="row">
-                <div class="col-12"></div>
+                <div class="col-12 col-md-6 col-lg-4 text-white">
+                    <img class="hero-banner" src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo">
+
+                    <h1 class="py-3">Rompi il cerchio</h1>
+
+                    <p class="py-3">Rialvati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+
+                    <button class="butn butn-orange">Acquista ora</button>
+                </div>
             </div>
         </div>
 
