--- a/index.html
+++ b/index.html
@@ -494,7 +494,82 @@
 
         </section>
 
-        
+        <!-- explore product-->
+
+        <section class="container-fluid py-4 products">
+
+            <!-- top title-->
+            <div class="row text-center justify-content-center">
+
+                <div class="col-12 col-md-10 col-lg-6 col-xl-5">
+
+                    <h1 class="py-3">
+                        Esplora PlayStation <span>R</span> 4
+                    </h1>
+
+                    <p>
+                        Giochi incredibili e intrattenimento senza fine.Non c'é mai stato un momento migliore per giocare sula tua PS4
+                    </p>
+
+                </div>
+
+            </div>
+
+            <!-- product cards -->
+
+            <div class="row row-cols-1 row-cols-md-3 gy-4 p-2 p-md-5">
+
+                <div class="col">
+                    <img src="img/ps4-slim-homepage-image-block.jpg" alt="PS4 slim">
+
+                    <h2>
+                        PlayStaion 4
+                    </h2>
+
+                    <p>
+                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                    </p>
+
+                    <button class="butn butn-blue">
+                        Scopri di più
+                    </button>
+                </div>
+                
+                <div class="col">
+                    <img src="img/double11-202010-tw-psvr.jpg" alt="double11-202010-tw-psvr">
+
+                    <h2>
+                        PlayStaion VR
+                    </h2>
+
+                    <p>
+                        oltre 500 titoli ed esperienze di gioco. Scoprili tutti.
+                    </p>
+
+                    <button class="butn butn-blue">
+                        Scopri di più
+                    </button>
+                </div>
+
+                <div class="col">
+                    <img src="img/dualshock-4-listing-thumb.jpg" alt="dualshock-4-listing-thumb">
+
+                    <h2>
+                        Accessori
+                    </h2>
+
+                    <p>
+                        Migliora la tua esperienza PS4 con un gamma di accessori ufficiali.
+                    </p>
+
+                    <button class="butn butn-blue">
+                        Scopri di più
+                    </button>
+                </div>
+
+            </div>
+
+        </section>
 
 
 
