ridimension img plus logo

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
             <!-- product cards -->
 
-            <div class="row row-cols-1 row-cols-md-3 gy-4 p-2 p-md-5">
+            <div class="row row-cols-1 row-cols-md-3 gy-3 p-2 p-md-5">
 
                 <div class="col">
                     <img src="img/ps4-slim-homepage-image-block.jpg" alt="PS4 slim">
@@ -570,6 +570,34 @@
             </div>
 
         </section>
+
+
+        <!-- play plus -->
+
+        <section class="container-fluid play-plus">
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col">
+
+                    <img class="border border-dark plus-logo" src="img/ps-plus-logo.png" alt="ps-plus-logo">
+
+                    <h2 class="d-inline-block">
+                        PlayStaion.Plus
+                    </h2>
+
+                    <p>
+                        Migliora la tua esperienza Playstation con l'accesso a miltigiocatore online, giochi mensili, sconti esclusivi e altro ancora.
+                    </p>
+
+                    <button class="butn butn-gray">
+                        Esplora PlayStaion Plus
+                    </button>
+
+
+                </div>
+            </div>
+        </section>
+
+
 
 
 
