--- a/index.html
+++ b/index.html
@@ -979,6 +979,37 @@
 
         <!--social-->
 
+        <section class="container social">
+
+            <div class="row text-center py-5">
+                <div class="col-12">
+                    <h2>
+                        Seguici sui social media
+                    </h2>
+                </div>
+            </div>
+
+            <div class="row row-cols-2 row-cols-md-4 gy-3">
+
+                <div class="col">
+                    <img src="img/twitter.jpg" alt="twitter">
+                </div>
+
+                <div class="col">
+                    <img src="img/facebook.jpg" alt="facebook">
+                </div>
+
+                <div class="col">
+                    <img src="img/instagram.jpg" alt="instagram">
+                </div>
+
+                <div class="col">
+                    <img src="img/youtube.png" alt="youtube">
+                </div>
+
+            </div>
+        </section>
+
 
 
 
