--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 
         <!--social-->
 
-        <section class="container social">
+        <section class="container social py-5">
 
             <div class="row text-center py-5">
                 <div class="col-12">
@@ -1010,10 +1010,140 @@
             </div>
         </section>
 
-
-
-
     </main>
+
+    <!-- footer -->
+
+    <footer class="container-fluid">
+
+        <div class="container text-white">
+
+            <div class="row">
+
+                <div class="col-12 col-lg-6">
+
+                    <img class="logo-footer mt-5 d-block" src="img/ps-footer.svg" alt="ps-footer">
+
+                    <div class="mt-5">
+                        <img class="language-globe me-2" src="img/language-globe.svg" alt="language-globe">
+
+                        <span>
+                            Country/Region: Italy
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <div class="col-12 col-lg-6 d-flex justify-content-between flex-column flex-md-row  mt-5">
+
+                    <ul class="list-unstyled d-inline-block">
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="list-unstyled d-inline-block">
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="list-unstyled d-inline-block">
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                Link footer n
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-xl-6">
+
+                    <img class="logo-sie mb-3" src="img/sie-logo.svg" alt="sie-logo">
+
+                    <p>
+                        Website <i class="fa-solid fa-copyright"></i> 2021 Interactive Entertaiment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a class="underline" href="#!">Maggiori info</a>
+                    </p>
+
+                    
+                </div>
+            </div>
+        </div>
+        
+    </footer>
 
 
 
