--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
         <!-- hero -->
 
-        <section class="hero container-fluid px-lg-5">
+        <section class="hero container-fluid py-5">
 
             <div class="container">
                 <div class="row">
@@ -919,7 +919,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-1 row-cols-md-3 gy-3">
+            <div class="row row-cols-1 row-cols-md-3 gy-3 cards-discount">
 
                 <div class="col">
                     <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="playstation-store-games-under-20-spotlight">
